--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -12,7 +12,7 @@ spec:
     nodePort: 8080
 ---
 kind: Deployment
-apiVersion: extensions/v1beta1
+apiVersion: v1
 metadata:
   name: train-schedule-deployment
   labels:
