--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -11,7 +11,7 @@ spec:
     port: 8080
     nodePort: 8080
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 apiVersion: v1
 metadata:
