--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -30,6 +30,6 @@ spec:
     spec:
       containers:
       - name: train-schedule
-        image: $DOCKER_IMAGE_NAME:$BUILD_NUMBER
+        image: prasadcm/train-schedule
         ports:
         - containerPort: 8080
