--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -1,35 +1,24 @@
-kind: Service
-apiVersion: v1
-metadata:
-  name: train-schedule-service
-spec:
-  type: NodePort
-  selector:
-    app: train-schedule
-  ports:
-  - protocol: TCP
-    port: 8080
-    nodePort: 32767
----
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
-apiVersion: v1
 metadata:
-  name: train-schedule-deployment
+  creationTimestamp: null
   labels:
     app: train-schedule
+  name: train-schedule
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: train-schedule
+  strategy: {}
   template:
     metadata:
+      creationTimestamp: null
       labels:
         app: train-schedule
     spec:
       containers:
-      - name: train-schedule
-        image: prasadcm/train-schedule
-        ports:
-        - containerPort: 8080
+      - image: prasadcm/train-schedule
+        name: train-schedule
+        resources: {}
+status: {}
